# email_newsletter

./: Cargo.toml  Dockerfile  spec.yml
configuration/: base.yml
migrations/: 20250620034252_make_status_not_null_in_subscriptions.sql
scripts/: ini_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
