[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "uuid", "chrono", "runtime-tokio-native-tls" ] }
tokio = { version = "1.45.1", features = ["full"] }
config = "0.15.11"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = "0.12.19"
env_logger = "0.11.8"

[dev-dependencies]
