[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "uuid", "chrono", "runtime-tokio-native-tls" ] }
tokio = { version = "1.45.1", features = ["full"] }
config = "0.15.11"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = "0.12.19"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"

[dev-dependencies]
