[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "uuid", "chrono", "runtime-tokio-native-tls" ] }
tokio = { version = "1.45.1", features = ["full"] }
config = "0.15.11"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tower-request-id = "0.3.0"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
claim = "0.5.0"

[dev-dependencies]
fake = "4.3.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.1"
serde_json = "1.0.140"
wiremock = "0.6.3"
